--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+<html>
+<head>
+    <title>Home</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
+<body>
+
+
+<div class="row">
+    <div class="col-md-12">
+        <nav class="navbar navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Home</a>
+            <a class="navbar-brand" href="#">About</a>
+            <a class="navbar-brand" href="#">Contact</a>
+        </nav>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <h1>Home</h1>
+    </div>
+</div>
+
+
+
+</body>
 </html>
