fix authentification / login

--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -16,8 +16,8 @@
                 <td>{{ user.username }}</td>
             </tr>
             <tr>
-                <th>Mail</th>
-                <td>{{ user.mail }}</td>
+                <th>Email</th>
+                <td>{{ user.email }}</td>
             </tr>
             <tr>
                 <th>Password</th>
