--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -10,7 +10,7 @@
             <tr>
                 <th>Id</th>
                 <th>Username</th>
-                <th>Mail</th>
+                <th>Email</th>
                 <th>Password</th>
                 <th>actions</th>
             </tr>
@@ -20,7 +20,7 @@
             <tr>
                 <td>{{ user.id }}</td>
                 <td>{{ user.username }}</td>
-                <td>{{ user.mail }}</td>
+                <td>{{ user.email }}</td>
                 <td>{{ user.password }}</td>
                 <td>
                     <a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
