--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,30 +1,52 @@
 <!DOCTYPE html>
+<html lang="fr">
+    <head>
+        <meta charset="UTF-8">
+        <title>{% block title %}Welcome!{% endblock %}</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
+        {% endblock %}
 
-<html>
-<head>
-    <title>Home</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body>
+        {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
+        {% endblock %}
+    </head>
+    <body>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container">
+                    <a class="navbar-brand" href="#">
+                        <img src="https://upload.wikimedia.org/wikipedia/fr/5/57/Dealabs_Logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Button 1</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Button 2</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Button 3</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Button 4</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-light" type="submit">Search</button>
+                        </form>
+                    </div>
+                </div>
+            </nav>
 
 
-<div class="row">
-    <div class="col-md-12">
-        <nav class="navbar navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Home</a>
-            <a class="navbar-brand" href="#">About</a>
-            <a class="navbar-brand" href="#">Contact</a>
-        </nav>
-    </div>
-</div>
-
-<div class="container">
-    <div class="row">
-        <h1>Home</h1>
-    </div>
-</div>
-
-
-
-</body>
+        {% block body %}{% endblock %}
+    </body>
 </html>
