add image deals, promo code

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,10 +28,10 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Bons plans</a>
+                    <a class="nav-link" href="{{ path('deal_index') }}">Bons plans</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Code promo</a>
+                    <a class="nav-link" href="{{ path('promo_code_index') }}">Codes Promo</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Gratuit</a>
