--- a/templates/deal/index.html.twig
+++ b/templates/deal/index.html.twig
@@ -3,7 +3,15 @@
 {% block title %}Deal index{% endblock %}
 
 {% block body %}
-    <h1>Deal index</h1>
+    <div>
+        {% for deal in deals %}
+            <div class="card">
+                <div class="card-body">
+                    <h3>{{ deal.title }}</h3>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 
     <table class="table">
         <thead>
