--- a/templates/deal/index.html.twig
+++ b/templates/deal/index.html.twig
@@ -2,22 +2,89 @@
 
 {% block title %}Deal index{% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <style>
+        .card {
+            animation: fadeInUp 0.5s;
+        }
+
+        .note-box {
+            display: inline-block;
+            padding: 4px 8px;
+            border-radius: 4px;
+            font-weight: bold;
+        }
+
+        .note-box--positive {
+            background-color: orange;
+        }
+
+        .note-box--negative {
+            background-color: red;
+        }
+
+        .note-box--neutral {
+            background-color: gray;
+        }
+
+        .note-box--low {
+            background-color: lightblue;
+        }
+
+        .note-box--very-low {
+            background-color: lightcyan;
+        }
+    </style>
+{% endblock %}
+
 {% block body %}
     <div>
         <div class="row">
-        {% for deal in deals %}
-            <div class="col-md-4">
-                <div class="card mb-4">
-                    <img src="{{ deal.image }}" class="card-img-top" alt="{{ deal.title }}">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ deal.title }}</h5>
-                        <p class="card-text">{{ deal.description }}</p>
-                        <p class="card-text">Prix : {{ deal.price }}€</p>
-                        <a href="{{ deal.url }}" class="btn btn-primary">Voir le deal</a>
+            {% for deal in deals %}
+                <div class="col-lg-8 offset-lg-2 mb-4">
+                    <div class="card h-100 animate__animated animate__fadeInUp">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="{{ vich_uploader_asset(deal, 'imageFile') }}" class="card-img" alt="{{ deal.imageName }}">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <div class="d-flex">
+                                        <button class="btn btn-sm btn-primary mr-2" style="font-weight: bold">-</button>
+                                        {% set noteColor = deal.note > 50 ? 'text-danger' : (deal.note > 20 ? 'text-warning' : (deal.note < 0 ? 'text-info' : (deal.note < 25 ? 'text-primary' : ''))) %}
+                                        <h5 class="card-text {{ noteColor }}" style="font-weight: bold">{{ deal.note }}</h5>
+                                        <button class="btn btn-sm btn-danger ml-2" style="font-weight: bold">+</button>
+                                    </div>
+                                    <h3 class="card-title mt-3 font-weight-bold">{{ deal.title }}</h3>
+                                    <p class="card-text text-danger font-weight-bold">{{ deal.price }}</p>
+                                    <p class="card-text text-muted">Regular Price: {{ deal.normalPrice }}</p>
+                                    <div class="d-flex justify-content-between align-items-center mt-3">
+                                        <a href="{{ deal.link }}" class="btn btn-primary btn-lg rounded-pill mr-3">Go to Deal</a>
+                                        <button class="btn btn-outline-secondary btn-lg border-dashed">Copy Promo Code</button>
+                                    </div>
+                                    <p class="card-text mt-3">{{ deal.description }}</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <div class="row">
+                                <div class="col">
+                                    <a href="{{ path('deal_show', {'id': deal.id}) }}" class="btn btn-primary btn-block">Show Deal</a>
+                                </div>
+                                <div class="col">
+                                    <a href="{{ path('deal_edit', {'id': deal.id}) }}" class="btn btn-secondary btn-block">Edit Deal</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        {% endfor %}
-
+            {% else %}
+                <div class="col-md-12">
+                    <div class="alert alert-info">No records found.</div>
+                </div>
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
