--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,4 +1,19 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+<div class="form-group">
+    <label for="title">Title</label>
+    {{ form_widget(form.title, {'attr': {'class': 'form-control', 'id': 'title'}}) }}
+</div>
+<div class="form-group">
+    <label for="description">Description</label>
+    {{ form_widget(form.description, {'attr': {'class': 'form-control', 'id': 'description'}}) }}
+</div>
+<div class="form-group">
+    <label for="price">Price</label>
+    {{ form_widget(form.price, {'attr': {'class': 'form-control', 'id': 'price'}}) }}
+</div>
+<div class="form-group">
+    <label for="image">Image</label>
+    {{ form_widget(form.image, {'attr': {'class': 'form-control', 'id': 'image'}}) }}
+</div>
+<button type="submit" class="btn btn-primary">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
