--- a/templates/deal/edit.html.twig
+++ b/templates/deal/edit.html.twig
@@ -3,11 +3,14 @@
 {% block title %}Edit Deal{% endblock %}
 
 {% block body %}
-    <h1>Edit Deal</h1>
 
-    {{ include('deal/_form.html.twig', {'button_label': 'Update'}) }}
+    <div class="container">
+        <h1>Edit Deal</h1>
+        {{ include('deal/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('deal_index') }}">back to list</a>
+        <a href="{{ path('deal_index') }}">back to list</a>
 
-    {{ include('deal/_delete_form.html.twig') }}
+        {{ include('deal/_delete_form.html.twig') }}
+    </div>
+
 {% endblock %}
