--- a/templates/deal/index.html.twig
+++ b/templates/deal/index.html.twig
@@ -41,7 +41,7 @@
 
 {% block body %}
     <div>
-        <div class="row">
+        <div class="row mt-3">
             {% for deal in deals %}
                 <div class="col-lg-8 offset-lg-2 mb-4">
                     <div class="card h-100 animate__animated animate__fadeInUp">
@@ -58,10 +58,10 @@
                                         <button class="btn btn-sm btn-danger ml-2" style="font-weight: bold">+</button>
                                     </div>
                                     <h3 class="card-title mt-3 font-weight-bold">{{ deal.title }}</h3>
-                                    <p class="card-text text-danger font-weight-bold">{{ deal.price }}</p>
-                                    <p class="card-text text-muted">Regular Price: {{ deal.normalPrice }}</p>
+                                    <p class="card-text text-danger font-weight-bold">{{ deal.price }}€</p>
+                                    <p class="card-text text-muted">Regular Price: {{ deal.normalPrice }}€</p>
                                     <div class="d-flex justify-content-between align-items-center mt-3">
-                                        <a href="{{ deal.link }}" class="btn btn-primary btn-lg rounded-pill mr-3">Go to Deal</a>
+                                        <a href="{{ deal.link }}" class="btn btn-primary btn-lg rounded-pill mr-3">Voir le Deal<i class="fa-solid fa-arrow-up-right-from-square ml-2"></i></a>
                                         <button class="btn btn-outline-secondary btn-lg border-dashed">Copy Promo Code</button>
                                     </div>
                                     <p class="card-text mt-3">{{ deal.description }}</p>
