--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,31 +4,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <form action="{{ path('app_login') }}" method="post" class="mt-5">
-                    {% if error %}
-                        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                    {% endif %}
-
-                    {% if app.user %}
-                        <div class="mb-3">
-                            Connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-                        </div>
-                    {% endif %}
-
-                    <h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
-                    <div class="form-group">
-                        <label for="inputUsername">Username</label>
-                        <input type="text" value="{{ last_username }}" name="_username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
-                    </div>
-                    <div class="form-group">
-                        <label for="inputPassword">Password</label>
-                        <input type="password" name="_password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-                    </div>
-
-                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-                    <button class="btn btn-lg btn-primary btn-block" type="submit">Connexion</button>
-                </form>
+                {{ include('security/login_form.html.twig') }}
             </div>
         </div>
     </div>
