add style to comments

--- a/templates/deal/index.html.twig
+++ b/templates/deal/index.html.twig
@@ -69,14 +69,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <div class="row">
-                                <div class="col">
-                                    <a href="{{ path('deal_show', {'id': deal.id}) }}" class="btn btn-primary btn-block">Show Deal</a>
-                                </div>
-                                <div class="col">
-                                    <a href="{{ path('deal_edit', {'id': deal.id}) }}" class="btn btn-secondary btn-block">Edit Deal</a>
-                                </div>
-                            </div>
+                            <a href="{{ path('deal_show', {'id': deal.id}) }}" class="btn btn-primary btn-block">Voir la page du Deal</a>
                         </div>
                     </div>
                 </div>
