--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -50,7 +50,7 @@
                     <a class="dropdown-item" href="#">Category 3</a>
                 </div>
             </li>
-            <li class="nav-item">
+            <li class="nav-item ml-3">
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2 rounded-pill search-input" type="search" placeholder="Search"
                            aria-label="Search">
@@ -66,13 +66,20 @@
                     </div>
                 </li>
             {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="modal" data-target="#createmodel">Connexion</a>
+                <li class="nav-item mx-3">
+                    <a class="nav-link btn btn-secondary rounded-pill" data-toggle="modal" data-target="#loginmodal">
+                        <div class="mx-2">Connexion</div>
+                    </a>
                     {{ include('security/login_modal.html.twig') }}
                 </li>
             {% endif %}
             <li class="nav-item">
-                <a class="nav-link btn btn-primary rounded-pill text-white mr-2 post-btn" href="{{ path('deal_new') }}"><i class="fa-solid fa-plus mr-2"></i>Poster</a>
+                <a class="nav-link btn btn-primary rounded-pill text-white mr-2 post-btn" href="{{ path('deal_new') }}">
+                    <div class="mx-2">
+                        <i class="fa-solid fa-plus mr-2"></i>
+                        Poster
+                    </div>
+                </a>
             </li>
         </ul>
     </div>
