--- a/templates/security/login_form.html.twig
+++ b/templates/security/login_form.html.twig
@@ -1,15 +1,15 @@
 <form action="{{ path('app_login') }}" method="post">
     <h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
-    <div class="form-group">
-        <label for="inputUsername">Username</label>
-        <input type="text" name="_username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
+    <div class="form-group mb-3">
+        <label for="inputUsername">Pseudo</label>
+        <input type="text" name="_username" id="inputUsername" class="form-control rounded-3" autocomplete="username" required autofocus>
     </div>
-    <div class="form-group">
-        <label for="inputPassword">Password</label>
-        <input type="password" name="_password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <div class="form-group mb-3">
+        <label for="inputPassword">Mot de passe</label>
+        <input type="password" name="_password" id="inputPassword" class="form-control rounded-3" autocomplete="current-password" required>
     </div>
 
     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Connexion</button>
+    <button class="btn btn-primary btn-block rounded-pill mt-3" type="submit">Connexion</button>
 </form>
