--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -3,30 +3,26 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <div class="container">
+    <div class="container bg-white my-4">
         <div class="row justify-content-center">
-            <div class="col-md-6">
-                <h1 class="mb-4">Register</h1>
+            <div class="col-md-6 my-3">
+                <h1 class="mb-4">S'enregistrer</h1>
 
                 {{ form_start(registrationForm) }}
-                <div class="form-group">
-                    {{ form_label(registrationForm.username) }}
-                    {{ form_widget(registrationForm.username, {'attr': {'class': 'form-control'}}) }}
-                </div>
                 <div class="form-group">
                     {{ form_label(registrationForm.email) }}
                     {{ form_widget(registrationForm.email, {'attr': {'class': 'form-control'}}) }}
                 </div>
                 <div class="form-group">
+                    {{ form_label(registrationForm.username) }}
+                    {{ form_widget(registrationForm.username, {'attr': {'class': 'form-control'}}) }}
+                </div>
+                <div class="form-group">
                     {{ form_label(registrationForm.plainPassword, 'Password') }}
                     {{ form_widget(registrationForm.plainPassword, {'attr': {'class': 'form-control'}}) }}
                 </div>
-                <div class="form-check mb-3">
-                    {{ form_widget(registrationForm.agreeTerms, {'attr': {'class': 'form-check-input'}}) }}
-                    {{ form_label(registrationForm.agreeTerms, 'I agree to the terms') }}
-                </div>
 
-                <button type="submit" class="btn btn-primary btn-block">Register</button>
+                <button type="submit" class="btn btn-primary btn-block rounded-pill">Register</button>
                 {{ form_end(registrationForm) }}
             </div>
         </div>
